--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Curso git</title>
+        <link rel="stylesheet" href="estilo.css">
     </head>
     <body>
         <h1>Hola Mundo!</h1>
