Cambio de estilo

--- a/index.html
+++ b/index.html
@@ -1,34 +1,50 @@
 <html>
-    <head>
-        <title>Curso git</title>
-        <link rel="stylesheet" href="estilo.css">
-    </head>
-    <body>
-        <h1>Hola Mundo!</h1>
+
+<head>
+    <title>Curso git</title>
+    <link rel="stylesheet" href="estilo.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+</head>
+
+<body>
+    <div class="container">
+        <div class="jumbotron">
+            <h1 class="display-3">Hola mundo</h1>
+            <p class="lead">Se ve mejor?</p>
+            <hr class="my-2">
+            <p>Curso git</p>
+            <p class="lead">
+                <a class="btn btn-primary btn-lg" href="Jumbo action link" role="button">Jumbo action name</a>
+            </p>
+        </div>
         <table class="table table-striped">
-        <tr>
-        <th>Lunes</th>
-        <th>Martes</th>
-        <th>Miercole</th>
-        <th>Jueves</th>
-        <th>Viernes</th>
-        </tr>
-        <tr>
-        <td>1</td>
-        <td>2</td>
-        <td>2</td>
-        <td>3</td>
-        <td>4</td>
-        <td>5</td>
-        </tr>
-        <tr>
-            <td>7</td>
-            <td>8</td>
-            <td>77</td>
-            <td>6</td>
-            <td>48</td>
-            <td>9</td>
+            <tr>
+                <th>Lunes</th>
+                <th>Martes</th>
+                <th>Miercole</th>
+                <th>Jueves</th>
+                <th>Viernes</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>2</td>
+                <td>2</td>
+                <td>3</td>
+                <td>4</td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>8</td>
+                <td>77</td>
+                <td>6</td>
+                <td>48</td>
             </tr>
         </table>
-    </body>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+    </script>
+</body>
+
 </html>
