--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li>Version 3</li>
             <li>Version 4</li>
             <li>Version 5</li>
+            <li>Version 6</li>
         </ul>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
