--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
           <tr>
             <td>Version 6</td>
         </tr>
+        <tr>
+            <td>Version 7</td>
+        </tr>
         </table>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
