--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 
 <body>
     <div class="container">
+        <div class="form-group">
+          <label for="">Buscar</label>
+          <input type="text"
+            class="form-control" name="" id="" aria-describedby="helpId" placeholder="">
+          <small id="helpId" class="form-text text-muted">Help text</small>
+        </div>
         <table class="table table-striped">
         <tr>
         <th>Numero de version</th>
