--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
             <tr>
                 <th>Numero de version</th>
             </tr>
+            <tr>
+                <td>Nueva caracteristica</td>
+            </tr>
+
         </table>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
