--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="card">
-                    <div class="card-header">
+                    <div class="card-header bg-warning">
                         Login
                     </div>
                     <div class="card-body">
